add resources and projects

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,4 +1,5 @@
 body {
+  background-color: #fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
@@ -23,7 +24,8 @@ a {
     color: #666;
   }
   &:hover {
-
+    color: #fff;
+    background-color: #000;
   }
 }
 
@@ -64,30 +66,4 @@ div {
     font-size: 12px;
     list-style: square;
   }
-}
-
-.table-striped{
-	margin: 20px 0;
-}
-
-.page-header{
-	border: 0;
-}
-
-h2.page-header{
-	float: left;
-}
-
-.addNew{
-	float: right;
-	/*margin: 40px 0 0 0;*/
-}
-
-a.company-logo {
-	font-family: 'Asap', sans-serif;
-	color: #fff;
-	font-weight: 700;
-	padding: 14px 0 0 15px;
-	float: left;
-	font-size: 24px;
 }
