--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1003,9 +1003,9 @@ table.dataTable thead .sorting_desc {
 .clearfix {
   clear: both;
 }
-.tags-group {
+.tags-group, .users-group {
   margin: 40px 0;
 }
-.tags-group .tags {
+.tags-group .tags, .tags-users .users {
   margin: 20px 0;
 }
