Normalización flujo creación / edición
class bottom, solo link cancel

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -14,7 +14,8 @@
     </div>
 
     <div class="form-actions">
-        <%= f.button :submit %>
+        <%= f.button :submit, class: "btn-success" %>
+        <%= link_to 'Cancel', projects_path %>
     </div>
 <% end %>
 
