--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -25,9 +25,9 @@
             <th>Name</th>
             <th>Description</th>
             <th>Tags</th>
-            <th class="text-center">Public</th>
+            <th class="text-center no-sort">Public</th>
             <th>Last update</th>
-            <th>Actions</th>
+            <th class="text-right no-sort">Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -319,9 +319,14 @@
       </table>
 <script type="text/javascript">
 $(document).ready(function(){
-    $('#resources').DataTable({
-        "dom": '<"toolbar">frtip',
-        "pagingType": "simple_numbers"
+    $('#resources').dataTable( {
+    "dom": '<"toolbar">frtip',
+    "pagingType": "simple_numbers",
+    "order": [],
+    "columnDefs": [ {
+      "targets"  : 'no-sort',
+      "orderable": false,
+    }]
     } );
 });
 
