cambio a:hover negro

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -19,13 +19,14 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #337ab7;
   &:visited {
-    color: #666;
+    color: #337ab7;
   }
   &:hover {
-    color: #fff;
-    background-color: #000;
+    color: #337ab7;
+    text-decoration: underline;
+    /*background-color: #000;*/
   }
 }
 
