--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
           <% if( user_signed_in? ) %>
+          <div class="pt15">
           <a class="company-logo" href="/">Wizard</a><span class="tagline">beta</span>
           <ul class="nav navbar-nav">
             <li><a href="/sandboxes">Sandboxes</a></li>
