clearfix no clearfix

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -437,6 +437,7 @@ color: #F2F2F2;
 .clearfix.toolbarName {
   padding: 10px 15px;
   text-align: center;
+  clear: none;
 }
 
 .inspector input, .inspector textarea {
