--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1032,3 +1032,6 @@ table.dataTable tbody td a i, table.dataTable tbody td a:visited i, table.dataTa
 .btn-default {
   color: #333333 !important;
 }
+div.well ol {
+  padding-left: 25px;
+}
