--- a/app/views/steps/step1.html.erb
+++ b/app/views/steps/step1.html.erb
@@ -42,6 +42,10 @@ $(document).ready(function () {
 
     $('div.setup-panel div a.btn-primary').trigger('click');
 });
+$('#myTab a').click(function (e) {
+  e.preventDefault()
+  $('#myTab a:first').tab('show') // Select first tab
+})
 </script>
 <div class="container">
 <div class="stepwizard">
@@ -69,63 +73,119 @@ $(document).ready(function () {
         <div class="col-xs-12">
             <div class="col-md-12">
                 <h3>Step 1 - Real world problem</h3>
+                <p>Articulate the real world problem children are facing that you want to address.</p>
                 <div class="form-group">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <p>Articulate the real world problem children are facing that you want to address.</p>
-                            <hr>
-                            <h4>Descrption</h4>
-                            <p>A real-world problem is the negative situation children face that UNICEF would like to change.</p>
-                            <p>When describing the problem be as concise as possible. You may want to use or refer to the formulation of problems used in planning documents that have already been discussed with and/or approved by the team.</p>
-                            <hr>
-                            <h4>Example</h4>
-                            <p>20 per cent of children in country XX live below the poverty line</p>
+                    <div role="tabpanel">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation" class="active"><a href="#explication" aria-controls="home" role="tab" data-toggle="tab">Explication</a></li>
+                            <li role="presentation"><a href="#data-entry" aria-controls="profile" role="tab" data-toggle="tab">Data Entry</a></li>
+                        </ul>
+                            <div class="tab-content">
+                                <div role="tabpanel" class="tab-pane active" id="explication">
+                                    <h4>Description</h4>
+                                    <p>A real-world problem is the negative situation children face that UNICEF would like to change.</p>
+                                    <p>When describing the problem be as concise as possible. You may want to use or refer to the formulation of problems used in planning documents that have already been discussed with and/or approved by the team.</p>
+                                    <hr>
+                                    <h4>Example</h4>
+                                    <p>20 per cent of children in country XX live below the poverty line</p>
+                                </div>
+                                <div role="tabpanel" class="tab-pane" id="data-entry">
+                                    <div class="form-group">
+                                        <label for="problem">Problem</label>
+                                        <input type="text" required="required" class="form-control" id="problem" placeholder="Enter problem">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="explanation">Explanation</label>
+                                        <textarea class="form-control" rows="3" id="explanation" placeholder="Enter explanation"></textarea>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="focus-area">Focus Area</label>
+                                        <select class="form-control" id="focus-area">
+                                          <option>Select focus area</option>
+                                          <option>Poverty and hunger</option>
+                                          <option>Universal primary education</option>
+                                          <option>Gender equality and empowerment of women</option>
+                                          <option>Child mortality</option>
+                                          <option>Maternal health</option>
+                                          <option>HIV/AIDS, malaria and other diseases</option>
+                                          <option>Environmental sustainability</option>
+                                          <option>Global partnership for development</option>
+                                        </select>
+                                    </div>
+                                    <button class="btn btn-success" type="button" >Save</button>
+                                    <button class="btn btn-success nextBtn" type="button" >Save & Next</button>
+                                </div>
                         </div>
-                        <div class="col-md-6">
-                            <form>
-                                <div class="form-group">
-                                    <label for="problem">Problem</label>
-                                    <input type="text" required="required" class="form-control" id="problem" placeholder="Enter problem">
-                                </div>
-                                <div class="form-group">
-                                    <label for="explanation">Explanation</label>
-                                    <textarea class="form-control" rows="3" id="explanation" placeholder="Enter explanation"></textarea>
-                                </div>
-                                <div class="form-group">
-                                    <label for="focus-area">Focus Area</label>
-                                    <select class="form-control" id="focus-area">
-                                      <option>Select focus area</option>
-                                      <option>Poverty and hunger</option>
-                                      <option>Universal primary education</option>
-                                      <option>Gender equality and empowerment of women</option>
-                                      <option>Child mortality</option>
-                                      <option>Maternal health</option>
-                                      <option>HIV/AIDS, malaria and other diseases</option>
-                                      <option>Environmental sustainability</option>
-                                      <option>Global partnership for development</option>
-                                    </select>
-                                </div>
-                                <button class="btn btn-success" type="button" >Save</button>
-                                <button class="btn btn-success nextBtn" type="button" >Save & Next</button>
-                            </form>
-                        </div>
-                    </div></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <div class="row setup-content" id="step-2">
         <div class="col-xs-12">
             <div class="col-md-12">
-                <h3> Step 2</h3>
+                <h3>Step 2 - Policy problem(s)</h3>
+                <p>Identify key policy-related causes of the 'real-world' problem</p>
                 <div class="form-group">
-                    <label class="control-label">Company Name</label>
-                    <input maxlength="200" type="text" required="required" class="form-control" placeholder="Enter Company Name" />
+                    <div role="tabpanel">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation" class="active"><a href="#explication2" aria-controls="home" role="tab" data-toggle="tab">Explication</a></li>
+                            <li role="presentation"><a href="#data-entry2" aria-controls="profile" role="tab" data-toggle="tab">Data Entry</a></li>
+                        </ul>
+                            <div class="tab-content">
+                                <div role="tabpanel" class="tab-pane active" id="explication2">
+                                    <h4>Description</h4>
+                                    <p>Behind those problems there are usually policy related causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships.</p>
+                                    <hr>
+                                    <h4>Example</h4>
+                                    <ul>
+                                        <li>Poor families entitled to very low child care benefits</li>
+                                        <li>High unemployment rates among disadvantaged groups linked to the absence of active employment policies for these groups</li>
+                                        <li>Increasing percentage of families uncovered by unemployment subsidy and exclusively receiving a low "guaranteed minimum income" subsidy.</li>
+                                    </ul>
+                                </div>
+                                <div role="tabpanel" class="tab-pane" id="data-entry2">
+                                    <div class=row>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label for="policy-problem">Policy problem</label>
+                                                <input type="text" class="form-control" required="required" id="Policy problem" placeholder="Enter policy problem">
+                                            </div>
+                                            <button class="btn btn-default" type="button" ><i class="fa fa-plus-square-o"></i> Add Policy Problem</button>
+                                            <hr>
+                                            <table class="table table-bordered">
+                                              <thead>
+                                                <tr>
+                                                  <th>Policy Problem</th>
+                                                  <th>Actions</th>
+                                                </tr>
+                                              </thead>
+                                              <tbody>
+                                                <tr>
+                                                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed metus ipsum, condimentum vitae varius non</td>
+                                                  <td class="text-right actions">
+                                                        <a href="#"><i class="fa fa-edit" title="Edit"></i></a>      <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
+                                                  </td>
+                                                </tr>
+                                                <tr>
+                                                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed metus ipsum, condimentum vitae varius non</td>
+                                                  <td class="text-right actions">
+                                                        <a href="#"><i class="fa fa-edit" title="Edit"></i></a>      <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
+                                                  </td>
+                                                </tr>
+                                              </tbody>
+                                            </table>
+                                            <button class="btn btn-success" type="button" >Save</button> 
+                                            <button class="btn btn-success nextBtn" type="button" >Save & Next</button>
+                                        </div>
+                                        <div class="col-md-6">
+
+                                        </div>
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label class="control-label">Company Address</label>
-                    <input maxlength="200" type="text" required="required" class="form-control" placeholder="Enter Company Address"  />
-                </div>
-                <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" >Next</button>
             </div>
         </div>
     </div>
